Need to call EndObservingDocument before destroy of PresShell Bug 152536 r=dcone sr=jst