content/base/src/nsDocumentViewer.cpp
@@ -1044,6 +1044,7 @@ PrintObject::~PrintObject()
   }
 
   if (mPresShell && !mSharedPresShell) {
+    mPresShell->EndObservingDocument();
     mPresShell->Destroy();
   }
 
